<resources>
    <string name="app_name">SSG</string>
    <string name="biometric_confirm_title">Do you want to allow "RocheCommonSampleApp" to use biometrics?</string>
    <string name="biometric_enable_desc">In order to be able to use Biometrics login, you have to enable that from device Settings.</string>
    <string name="fingerprint_supported">Fingerprint Supported</string>
    <string name="face_supported">Face Supported</string>
    <string name="iris_supported">Iris Supported</string>
    <string name="biometrics">Biometrics</string>
    <string name="unzip">UnZip</string>
    <string name="is_rooted">Check If Device Rooted</string>
    <string name="verify_license">Verify License</string>
    <string name="valid_license">The App license is valid.</string>
    <string name="valid_license_debug">The App license is always valid in Debug Mode.</string>
    <string name="security_check_ignored">The security check is ignored.</string>
    <string name="retry_security_check">Security check error, please try again later.</string>
    <string name="check_is_security_valid">Is App Security Valid</string>
    <string name="start_chat">Start Chat</string>
    <string name="enter">Enter</string>
    <string name="start_full_chat">Start Chat - Full Screen</string>
    <string name="start_custom_chat">Start Chat - Custom UI</string>
    <string name="main_description">This Sample App will demo the features and functionalities of the SSG Android common libraries.</string>
    <string name="recall">App/SaMD Recall</string>
    <string name="utilities">Utilities</string>
    <string name="salesforce">Salesforce</string>
    <string name="release_less_material">Release-less Materials</string>
    <string name="get_static_user_manual">Get Static User Manual</string>
    <string name="fingerprint_enable">Fingerprint Enable</string>
    <string name="enroll_biometric">Enroll Biometric</string>
    <string name="authenticate">Authenticate</string>
    <string name="status_true">True</string>
    <string name="status_false">False</string>
    <string name="is_biometric_enrolled">Is Biometric Enrolled</string>
    <string name="error_message">Error</string>
    <string name="app_recall">App Recall</string>
    <string name="base_url">Base URL</string>
    <string name="samd_recall">SaMD Recall</string>
    <string name="app_id">App ID</string>
    <string name="app_version">App Version</string>
    <string name="country">Country</string>
    <string name="samds">Comma Separated SaMDs</string>
    <string name="chat_session_disconnected">Chat session is now disconnected.</string>
    <string name="chat_session_ended">Chat session has ended.</string>
    <string name="downloaded_path">Materials downloaded to: %1$s</string>
    <string name="error">Error: %1$s</string>
    <string name="hint_manifest_url">Manifest URL</string>
    <string name="hint_target_sub_dir">Target Sub Directory</string>
    <string name="hint_app_version">App Version</string>
    <string name="hint_locale">Locale</string>
    <string name="hint_file_type">File Type</string>
    <string name="txt_wifi_only">Wifi Only</string>
    <string name="txt_download">Download</string>
    <string name="txt_cancel_download">Cancel Download</string>
    <string name="txt_cancel_failed">Cancel Failed</string>
    <string name="txt_cancel_succeeded">Cancel Succeeded</string>
    <string name="txt_fcm_token_with_label">FCM Token: %1$s</string>

    <!-- Salesforce strings must be included if you want to localize them -->
    <!--
    <string name="chatbot_transfer_no_agents_available_message">Sorry, no agents are available now.\nPlease try again later.</string>
    <string name="chat_minimized_connecting">Connecting to chat\.\.\.</string>
    -->
    <string name="split_io_user">Split.io</string>
    <string name="split_io_version">Version: %s</string>
    <string name="split_io_country">Country: US</string>
    <string name="split_io_study">Study: Beta</string>
    <string name="split_io_percentage_based_rollout">% based rollout</string>
    <string name="split_io_ab_testing">A/B Testing</string>
    <string name="button_a">Button A</string>
    <string name="button_b">Button B</string>
    <string name="button_c">Button C</string>
    <string name="button_d">Button D</string>
    <string name="button_e">Button E</string>
    <string name="button_f">Button F</string>
    <string name="user_configuration">User Configuration</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="user">USER</string>

    <string name="system_messages">System Messages</string>
    <string name="type">Comma separated valid message types</string>
    <string name="request_system_messages">Request system messages</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="ok">Okay</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="app_or_samd_id">App or SaMD ID</string>
    <string name="app_or_samd_version">App or SaMD Version</string>
    <string name="country_optional">Country (Optional)</string>
    <string name="system_messages_not_available">System messages are not available</string>

    <!-- Push Strings-->
    <string name="push_notification">Push Notification</string>
    <string name="btn_txt_login">Login</string>
    <string name="btn_txt_register">Register for Push Notifications</string>
    <string name="btn_txt_unregister">Unregister for Push Notifications</string>
    <string name="push_dialog_title">Notification Disabled</string>
    <string name="push_dialog_message">Please enable Push Notification from the settings for this application</string>
    <string name="push_registered_title">Already Registered</string>
    <string name="push_registered_message">Your device already Registered for Push Notification</string>
    <string name="amplitude">Amplitude</string>
    <string name="navify_platform_login">Navify Platform Login</string>
    <string name="login_to_navify">Login to Navify Platform</string>
    <string name="authentication_successful">Authentication Successful</string>
    <string name="logout">Logout</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="email_verified">Email Verified</string>
    <string name="name">Name</string>
    <string name="preferred_username">Preferred Username</string>
    <string name="given_name">Given Name</string>
    <string name="family_name">Family Name</string>
    <string name="email">Email</string>
    <string name="floodlight_host">https://floodlight.dhp-dev.dhs.platform.navify.com</string>
    <string name="ssg_test_application">com.roche.ssg.test.application</string>
    <string name="version_1_0">1.0</string>
    <string name="locale_fr">fr</string>
    <string name="samd_id">com.roche.ssg.test.samd.one:1.0.0,com.roche.ssg.test.samd.two:1.0.1</string>
    <string name="static_content_base_url">https://static-content.dhp-dev.dhs.platform.navify.com/com.roche.floodlight/sdk/docs/sdk-metadata.json</string>
    <string name="static_content_version">1.4.0</string>
    <string name="static_content_locale">pt_BR</string>
    <string name="static_content_file_type">assessment_user_manuals</string>
    <string name="system_messages_type">quality,system</string>
    <string name="system_messages_samd">com.roche.floodlight</string>
    <string name="system_message_samd_version">1.3.2</string>
    <string name="etl_pipeline">ETL Pipeline</string>
    <string name="btn_txt_get_pre_signed_url">Get Pre-Signed URL</string>
    <string name="etl_username">ssg-etl-patient-1@putsbox.com</string>
    <string name="etl_password">DHPAutomation@123</string>
    <string name="please_enter_valid_credentials">Please Enter Valid Credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="amplify_initialization_error">Amplify Initialization Error</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="signed_url_failed">Signed URL Failed %s</string>
    <string name="success">Success %s</string>
    <string name="ssg">SSG</string>
    <string name="tag_count">Tag Count</string>
    <string name="please_enter_tag_count">Please Enter Tag Count</string>
    <string name="dhp_assessment_id">DHP Assessment ID</string>
    <string name="dhp_app_id">DHP Application ID</string>
    <string name="please_enter_dhp_assessment_id">Please enter DHP Assessment ID</string>
    <string name="please_enter_dhp_app_id">Please enter DHP Application ID</string>
    <string name="draw_shape">draw_shape</string>
    <string name="com_roche_dummy">com.roche.dummy</string>
</resources>