<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Each item id should be same as in the nav_graph fragment id-->
    <group>
        <item
            android:id="@+id/biometrics_nav_f"
            android:title="@string/biometrics"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/recallFragment"
            android:title="@string/recall"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/utilsFragment"
            android:title="@string/utilities"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/releaseLessMaterialFragment"
            android:title="@string/release_less_material"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/salesforceFragment"
            android:title="@string/salesforce"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/splitIoFragment"
            android:title="@string/split_io_user"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/systemMessagesFragment"
            android:title="@string/system_messages"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/pushNotificationFragment"
            android:title="@string/push_notification"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/securityCheckerFragment"
            android:title="@string/verify_license"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/amplitudeFragment"
            android:title="@string/amplitude"
            app:actionLayout="@layout/action_view_arrow" />

        <item
            android:id="@+id/navifyLoginFragment"
            android:title="@string/navify_platform_login"
            app:actionLayout="@layout/action_view_arrow" />

    </group>
</menu>