<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_fingerprint_supported,txt_status_fingerprint_supported,btn_face_supported,txt_status_face_supported,btn_iris_supported,txt_status_iris_supported,btn_biometric_enrolled,txt_status_biometric_enrolled,btn_enroll_biometric,txt_status_enroll,btn_authenticate,txt_status_authenticate"
        app:flow_maxElementsWrap="2"
        app:flow_wrapMode="aligned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_fingerprint_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_supported"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_fingerprint_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />

    <Button
        android:id="@+id/btn_face_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/face_supported"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_face_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />

    <Button
        android:id="@+id/btn_iris_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iris_supported"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_iris_supported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />

    <Button
        android:id="@+id/btn_biometric_enrolled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/is_biometric_enrolled"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_biometric_enrolled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />

    <Button
        android:id="@+id/btn_enroll_biometric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enroll_biometric"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_enroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />

    <Button
        android:id="@+id/btn_authenticate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/authenticate"
        app:layout_constraintHorizontal_weight="0.7" />

    <TextView
        android:id="@+id/txt_status_authenticate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintHorizontal_weight="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>